fix playground console layout issues

--- a/src/components/Documentation/Layout/DocsLayout.module.scss
+++ b/src/components/Documentation/Layout/DocsLayout.module.scss
@@ -1,6 +1,6 @@
 .doc-content {
     padding: 105px 0 80px;
-    min-height: calc(88vh - 54px);
+    min-height: 95vh;
     justify-content: center;
     display: flex;
     @media (max-width: 992px) {
@@ -74,4 +74,4 @@
 .page-content {
     width: calc(100% - 262px);
     padding-left: 42px;
-}  
+}
