--- a/src/pages/playground/Playground.module.scss
+++ b/src/pages/playground/Playground.module.scss
@@ -38,6 +38,16 @@
                 @media (max-width: 1078px) {
                     flex-direction: column;
                 }
+
+                pre {
+                    padding: 16px;
+                    border: none;
+                    border-radius: 4px;
+                    background-color: #0e0e0e;
+                    color: #c2c2c2;
+                    line-height: 24px;
+                    margin-top: 15px;
+                }
             }
         }
     }
@@ -186,7 +196,6 @@
     background-color: $black-color-2;
 }
 
-
 .playground-box {
     border-radius: 6px;
     border: none;
@@ -213,7 +222,9 @@
         pre .number {
             color: #ae81ff;
         }
-        pre.req, pre.res, pre.err {
+        pre.req,
+        pre.res,
+        pre.err {
             padding: 16px;
             border: none;
             border-radius: 4px;
